# xotl.crdt

./: .dir-locals.el  .gitignore  .gitlab-ci.yml  .travis.yml  LICENSE  Makefile  Pipfile  README.rst  pyproject.toml  setup.cfg  tox.ini
docs/: Makefile
docs/source/: conf.py  history.rst  index.rst
docs/source/tests/: counters.rst
docs/source/xotl.crdt/: base.rst  clocks.rst  counter.rst  register.rst  sets.rst  vclock.rst
docs/source/xotl.crdt/testing/: base.rst  counters.rst  registers.rst  sets.rst
src/tests/: test_counter.py  test_registers.py  test_sets.py  test_vclock.py
src/xotl/crdt/: base.py  clocks.py  counter.py  register.py  sets.py
src/xotl/crdt/testing/: base.py  counters.py  registers.py  sets.py
tests/: test_counter.py  test_registers.py  test_sets.py  test_vclock.py
xotl/crdt/: actors.py  base.py  clocks.py  counter.py  register.py  release.py  sets.py  vclock.py
xotl/crdt/cm/: __init__.py
xotl/crdt/cv/: __init__.py  counter.py
xotl/crdt/testing/: base.py  counters.py  registers.py  sets.py
