[metadata]
name = xotl.crdt
version = attr: xotl.crdt.release.VERSION
description = CRDTs for Python
long_description = file: README.rst
classifiers =
   Programming Language :: Python

author = Merchise Autrement [~º/~]
author_email = info@merchise.org
maintainer = Manuel Vázquez Acosta
license = GPLv3
url = https://gitlab.merchise.org/merchise/xotl.crdt
project_urls =
   tracker=https://gitlab.merchise.org/merchise/xotl.crdt

[options]
zip_safe = False
packages = find:
namespace_packages = xotl
include_package_data = True
python_requires = >=2.7,<3.8,!=3.0,!=3.1,!=3.2,!=3.3
install_requires =
   xoutil>=1.9.7,<2.0;python_version<"3.4"
   xoutil>=1.9.7;python_version>="3.4"


[egg_info]
tag-build = .dev


[flake8]
exclude = .tox,.git,*/migrations/*,node_modules/*,tests/*,docs/*,build/*
ignore = E402,E731,E741
max-line-length = 95
