[metadata]
name = xotl.crdt
version = attr: xotl.crdt.release.VERSION
description = CRDTs for Python
long_description = file: README.rst
classifiers =
   Programming Language :: Python

author = Merchise Autrement [~º/~]
author_email = info@merchise.org
maintainer = Manuel Vázquez Acosta
license = GPLv3
url = https://gitlab.merchise.org/merchise/xotl.crdt
project_urls =
   tracker=https://gitlab.merchise.org/merchise/xotl.crdt

[options]
zip_safe = False
packages = find:
namespace_packages = xotl
include_package_data = True
python_requires = ">=3.6"
install_requires =
   xoutil>=1.9.7
   dataclasses;python_version<"3.7"
   decorator>=4,<5


[egg_info]
tag-build = .dev


[flake8]
exclude = .tox,.git,*/migrations/*,node_modules/*,tests/*,docs/*,build/*
ignore = E402,E731,E741
max-line-length = 95
