[metadata]
name = xotl.crdt
version = attr: xotl.crdt.release.VERSION
description = CRDTs for Python
long_description = file: README.rst
classifiers =
   Programming Language :: Python

author = Merchise Autrement [~º/~]
author_email = info@merchise.org
maintainer = Manuel Vázquez Acosta
license = GPLv3
url = https://gitlab.merchise.org/merchise/xotl.crdt
project_urls =
   tracker=https://gitlab.merchise.org/merchise/xotl.crdt

[options]
zip_safe = False
packages = find:
namespace_packages = xotl
include_package_data = True
python_requires = >=3.6
install_requires =
   xoutil>=1.9.7
   dataclasses;python_version<"3.7"
   decorator>=4,<5

[egg_info]
tag-build = .dev
tag-date = true


[bdist_wheel]
python-tag = py3


[flake8]
exclude = .tox,.git,*/migrations/*,node_modules/*,tests/*,docs/*,build/*
select = E,W,B950
ignore = E402,E501,E731,E741,W504,W503,B011
max-line-length = 90


[coverage:run]
branch = False


[coverage:report]
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover

    # Don't complain about missing debug-only code:
    def __repr__
    def __hash__
    def __str__
    if self\.debug

    # Don't complain if tests don't hit defensive assertion code:
    raise AssertionError
    raise NotImplementedError
    return NotImplemented

    # Don't complain if non-runnable code isn't run:
    if __name__ == .__main__.:

omit =
   */xotl/crdt/release.py

fail_under = 95
skip_covered = true
show_missing = true
